--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
 
+  .spacer {
+    width: 300px;
+    height: 15px;
+  }
+
+  #home-container {
+    button {
+      width: 70%
+    }
+  }
+
 }
