--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -38,8 +38,12 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  white:      #fff
 );
+
+$toolbar-background: #C4CEC7;
+$toolbar-text-color: #ffffff;
 
 
 // App iOS Variables
