--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -75,6 +75,7 @@ $toolbar-text-color: #ffffff;
 // default are overridden.
 
 @import "ionic.theme.default";
+@import "theme.dark";
 
 
 // Ionicons
