--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="mainContent">
+<ion-menu [content]="mainContent" persistent="true">
     <ion-content id="side-menu" style="background-color:#7A5258;">
         <div class="spacer" style="height:30px;"></div>
         <ion-item no-lines text-center style="background-color: rgba(255, 255, 255, 0);">
