--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -14,6 +14,10 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+.toolbar-background {
+  background-image: url('../assets/img/foillage.jpg');
+}
+
 .toolbar-title {
   color: #fff;
   text-align: center;
