--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -6,6 +6,10 @@ page-home {
     margin: 0 auto;
   }
 
+  .home-menu{
+    bottom: 3.5em;
+  }
+
   .spacer {
     width: 300px;
     height: 20px;
