--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -54,6 +54,8 @@ $palette:(
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
+$searchbar-md-input-border-radius: 20px;
+
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
