Changed statute footer toolbar color

--- a/client/src/pages/statue/statue.scss
+++ b/client/src/pages/statue/statue.scss
@@ -2,4 +2,10 @@ page-statue {
   button.bookmark{
     right: 100%;
   }
+
+  #bottom-toolbar {
+	  .toolbar-background {
+	  	background: white;
+	  }
+  }
 }
