--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -27,11 +27,13 @@ page-home {
 
 
   .option-button {
-    font-size: 12px;
-    font-weight: normal;
+    font-size: 1em;
+    font-weight: 100;
     text-transform: none;
-    height: 35px;
+    height: 25%;
     width: 75%;
+    margin: 4%;
+    padding: 3px;
   }
 
   //splash screen
