--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -2,7 +2,7 @@
     <ion-content id="side-menu" style="background-color:#7A5258;">
         <div class="spacer" style="height:30px;"></div>
         <ion-item no-lines text-center style="background-color: rgba(255, 255, 255, 0);">
-            <img src='../assets/img/HawaiiSeal.png' height=150 width=150/>
+            <img src="http://www.worldatlas.com/webimage/flags/usa/hiseal.gif" height=150 width=150/>
         </ion-item>
         <div class="spacer" style="height:30px;"></div>
         <ion-list no-lines id="menu-list">
