--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -27,13 +27,11 @@ page-home {
 
 
   .option-button {
-    font-size: 1em;
-    font-weight: 100;
+    font-size: 12px;
+    font-weight: normal;
     text-transform: none;
-    height: 25%;
+    height: 35px;
     width: 75%;
-    margin: 4%;
-    padding: 3px;
   }
 
   //splash screen
