change background and symbols

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -20,6 +20,7 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $toolbar-text-color: #ffffff;
+$background-color: #F8F8F8;
 
 // Named Color Variables
 // --------------------------------------------------
