vertically aligned home buttons

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -5,6 +5,12 @@ page-home {
     color: #4C4C4C;
   }
 
+  #menu-list {
+    height: 100%;
+    display: block;
+    vertical-align: middle;
+  }
+
   #hrs-title {
     font-weight: bold;
     font-size: 40px;
