UI updates. Mainly statute and overall font size

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -56,6 +56,8 @@ $palette:(
 // Material Design only Sass variables can go here
 
 $searchbar-md-input-border-radius: 20px;
+$toolbar-md-title-font-size: 1.6rem;
+$item-md-font-size: 1.5rem;
 
 // App Windows Variables
 // --------------------------------------------------
