--- a/client/src/pages/statue/statue.scss
+++ b/client/src/pages/statue/statue.scss
@@ -8,4 +8,9 @@ page-statue {
  	  	background: white;		
  	  }		
    }
+
+   .text-overflow-center {
+	display: flex; 
+	justify-content: center;
+   }
 }
