Home page overhaul. Search bar update.

--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -15,7 +15,7 @@
 // automatically applied to the <body> element in the app.
 
 .toolbar-background {
-  background-image: url('../assets/img/foillage.jpg');
+  background-image: url('../assets/img/foilage_black.jpg');
   background-size: 100%;
 }
 
