--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -31,7 +31,7 @@ $background-color: #F8F8F8;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #488aff,
+  primary: white,
   secondary: #32db64,
   danger: #f53d3d,
   light: #f4f4f4,
@@ -55,7 +55,8 @@ $palette:(
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-$searchbar-md-input-border-radius: 20px;
+$searchbar-md-input-box-shadow: none;
+$searchbar-md-input-background-color: #F8F8F8;
 $toolbar-md-title-font-size: 1.6rem;
 $item-md-font-size: 1.5rem;
 
