New sidebar color

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,5 +1,5 @@
 <ion-menu [content]="mainContent" persistent="true">
-    <ion-content id="side-menu" style="background-color:#7A5258;">
+    <ion-content id="side-menu" style="background-color:#6D3B47;">
         <div class="spacer" style="height:30px;"></div>
         <ion-item no-lines text-center style="background-color: rgba(255, 255, 255, 0);">
             <img src='../assets/img/HawaiiSeal.png' height=150 width=150/>
