help page and general UI bug fixes

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -59,6 +59,8 @@ $searchbar-md-input-box-shadow: none;
 $searchbar-md-input-background-color: #F8F8F8;
 $toolbar-md-title-font-size: 1.6rem;
 $item-md-font-size: 1.5rem;
+$button-md-box-shadow: none;
+$text-input-md-highlight-color: white;
 
 // App Windows Variables
 // --------------------------------------------------
